[gd_scene load_steps=5 format=3 uid="uid://baf55xhxwxpoa"]

[ext_resource type="Texture2D" uid="uid://cqt60qw15mxfu" path="res://assets/title/SB POV.png" id="1_3m208"]
[ext_resource type="Script" path="res://scripts/title.gd" id="1_f88xe"]
[ext_resource type="Texture2D" uid="uid://oytkx0gwxkgf" path="res://assets/Frame.png" id="2_fv74e"]
[ext_resource type="AudioStream" uid="uid://besiawes1axq4" path="res://assets/Piano 1.mp3" id="4_h2yac"]

[node name="Title" type="Node2D"]
script = ExtResource("1_f88xe")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="TextureRect" type="TextureRect" parent="Control"]
offset_right = 1024.0
offset_bottom = 1024.0
texture = ExtResource("1_3m208")
expand_mode = 2

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 299.0
offset_top = 206.0
offset_right = 727.0
offset_bottom = 385.0
theme_override_colors/font_color = Color(0.32549, 0.164706, 0.0313726, 1)
theme_override_font_sizes/font_size = 64
text = "SYMPHONIE 
DU TRAIN"
horizontal_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="Control"]
custom_minimum_size = Vector2(1024, 1024)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_fv74e")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 174.0
offset_top = 638.0
offset_right = 517.0
offset_bottom = 1305.0
scale = Vector2(2, 2)

[node name="Level 1" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "LEVEL 1: AVIGNON -> TOULOUSE"
alignment = 0

[node name="Level 2" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
disabled = true
text = "LEVEL 2: LYON -> PARIS"
alignment = 0

[node name="Level 3" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
disabled = true
text = "LEVEL 3: LILLE -> MARSEILLE"
alignment = 0

[node name="Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "MADE BY BANANALAZER & BAUKETOP"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_h2yac")
autoplay = true

[connection signal="pressed" from="Control/VBoxContainer/Level 1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Level 2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Level 3" to="." method="_on_level_3_pressed"]
